--- a/layouts/schedule/single.html
+++ b/layouts/schedule/single.html
@@ -11,7 +11,7 @@
       
       <div class="column75">
 
-      <h1 class="article-title">{{ .Weight }}&nbsp;&nbsp;&nbsp;{{ .Title | markdownify }}</h1>
+      <h1 class="article-title">{{ .Title | markdownify }}</h1>
       
       <div class="tags-list">
       <i class="fas fa-box-open" style="color:#1a162dde;"></i>&nbsp;
