--- a/public/css/main-site.css
+++ b/public/css/main-site.css
@@ -130,7 +130,7 @@ a.iconLink {
   background-repeat: no-repeat;
   background-position: left center;
   background-size: 20px 20px;
-  background-image: url(images/iconLink.svg);
+ /* background-image: url(images/iconLink.svg);*/
   font-size: 16px; }
   a.iconLink:hover {
     text-decoration: underline; }
