--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,8 +10,7 @@
 
 <!-- hexes on the left -->
 
-
-     <!-- <div class="hexBadges"> -->
+    <img src="images/sta210_sticker_small.png">
   <!--
         {{ $col0 := .Params.col0 }}
         {{ with $col0 }}
@@ -26,7 +25,6 @@
         {{ with .row4 }}<a href="https://{{ $.Site.Params.hex_base_url }}{{ . }}"><div class="filtered r4 c2"></div><img src="https://raw.githubusercontent.com/rstudio/hex-stickers/master/{{ $.Site.Params.hex_ext | upper }}/{{ . }}.{{ $.Site.Params.hex_ext}}" alt="{{ . }} hex sticker" class="r4 c2"></a>{{ end }}
         {{ end }}
   -->
-<!--</div> -->
 
 
 <!-- text on the right -->
