--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
 {{ with .Site.GetPage "/home/band_one.md" }}
   <div class="band first">
     <div class="bandContent">
-    <img src="img/sta210_sticker_small.png">
+    <img src="img/sta210_sticker.png">
   <!--
         {{ $col0 := .Params.col0 }}
         {{ with $col0 }}
