--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -33,7 +33,7 @@
 
     {{ partial "footer_highlightjs" . }}
     {{ partial "footer_mathjax" . }}
-    {{ template "_internal/google_analytics.html" . }}
+  <!-- {{ template "_internal/google_analytics.html" . }}-->
 
   </body>
 </html>
