trying to make homepage work.

--- a/public/css/sta210.css
+++ b/public/css/sta210.css
@@ -28,10 +28,10 @@ body, button, input, textarea {
   margin-bottom: 1.5em; /* increased from 0.5 main-site.css */
 }
 
-/*
+
 .bandContent{
-  max-width: 2100px; /*Main container width with page content */
-/*}*/
+  max-width: 100%; /*Main container width with page content */
+}
 
 .splitColumns {
   display: flex;
@@ -364,12 +364,8 @@ a.productName {
 }
 
 #homeContent .blurb{
-  font-size: 14px;
+  width: 500%;
 } 
-
-#homeContent .blurb table {
-  max-width: 100%;
-}
 
 
 /* Easter egg in corner of homepage */
@@ -715,7 +711,7 @@ sup {
 
   .column25-left {
   position: static;
-  padding-top: 50px;
+  padding-top: 0px;
 	padding-right: 0em;
 	border-right: none; 
 	max-width: 100%;
