--- a/themes/hugo-tourmaline/layouts/index.html
+++ b/themes/hugo-tourmaline/layouts/index.html
@@ -1,16 +1,13 @@
 {{ define "main" }}
 
 <!-- page -->
-<div id="homeContent" class="pushFooter">
+<div id="homeContent">
 
 <!-- band_one.md populates this section -->
 {{ with .Site.GetPage "/home/band_one.md" }}
   <div class="band first">
     <div class="bandContent">
 
-<!-- hexes on the left -->
-    
-<!-- text on the right -->
       <div class="blurb">
         <div class="tagline">
           {{ .Title }}
@@ -48,6 +45,7 @@
 {{ end }}
 
 <!-- band_three.md populates this section -->
+
 
 {{ with .Site.GetPage "/home/band_three.md" }}
 
