--- a/layouts/schedule/single.html
+++ b/layouts/schedule/single.html
@@ -3,7 +3,7 @@
 {{ $page := . }}
 {{ $banner := ($page.Resources.ByType "image").GetMatch "*-wd*" }}
 
-<div class="band padForHeader pushFooter">
+<div class="band padForHeader Footer">
   <div class="bandContent">
     <div class="full splitColumns withMobileMargins">
 
