--- a/public/css/main-site.css
+++ b/public/css/main-site.css
@@ -49,6 +49,7 @@ table {
 
 .flex {
   display: flex;
+  flex-shrink: 3; 
   justify-content: space-between;
   display: -ms-flexbox;
   -ms-flex-pack: justify;
@@ -173,6 +174,7 @@ a {
   transition-duration: 0.25s; }
   #rStudioHeader .headerChunk {
     display: flex;
+    flex-shrink: 3; 
     justify-content: flex-start;
     align-items: center;
     display: -ms-flexbox;
@@ -183,7 +185,7 @@ a {
     -webkit-justify-content: flex-start; }
   #rStudioHeader #menuToggler, #rStudioHeader #overlayNavToggler {
     display: inline-block;
-    flex-shrink: 0;
+    flex-shrink: 3;
     width: 30px;
     height: 30px;
     background-repeat: no-repeat;
@@ -220,6 +222,7 @@ a {
   #rStudioHeader .innards {
     padding: 40px 0;
     display: flex;
+    flex-shrink: 3; 
     justify-content: space-between;
     display: -ms-flexbox;
     -ms-flex-pack: justify;
@@ -352,7 +355,7 @@ a {
   text-align: right;
   font-weight: 400;
   font-size: 13px;
-  line-height: 26px;
+  line-height: 15px;
   white-space: nowrap; }
   #rStudioHeader #menu #menuToggler {
     display: none; }
@@ -438,7 +441,6 @@ a {
   display: block; }
 
 #rStudioFooter {
-  position: relative;
   z-index: 12;
   box-sizing: border-box;
   height: 92px; }
@@ -451,6 +453,7 @@ a {
     line-height: 25px; }
   #rStudioFooter .bandContent {
     display: flex;
+    flex-shrink: 3; 
     justify-content: space-between;
     display: -ms-flexbox;
     -ms-flex-pack: justify;
@@ -510,6 +513,7 @@ a {
 
 .splitColumns {
   display: flex;
+  flex-shrink: 3; 
   justify-content: space-between;
   display: -ms-flexbox;
   -ms-flex-pack: justify;
@@ -546,7 +550,7 @@ a {
 
 /* Sections */
 .section {
-  margin-bottom: 40px; }
+  margin-bottom: 10px; }
   .section.info {
     background-color: #f8f8f8;
     padding: 20px; }
@@ -558,7 +562,7 @@ a {
   .section.smallBottomMargin {
     margin-bottom: 10px; }
   .section.marginTop {
-    margin-top: 40px; }
+    margin-top: 20px; }
 
 .sectionTitle {
   font-size: 24px;
@@ -611,6 +615,7 @@ a {
 
 .listItem {
   display: flex;
+  flex-shrink: 3; 
   justify-content: flex-start;
   display: -ms-flexbox;
   -ms-flex-pack: start;
@@ -632,6 +637,7 @@ a {
     line-height: 20px; }
     .listItem .itemDetails .itemHeader {
       display: flex;
+      flex-shrink: 3; 
       justify-content: space-between;
       display: -ms-flexbox;
       -ms-flex-pack: justify;
@@ -1057,7 +1063,7 @@ em {
   #homeContent .band .blurb {
     font-weight: 300;
     display: inline-block;
-    min-height: 160px;
+    min-height: 60px;
     font-size: 24px;
     line-height: 40px;
     max-width: 48%; }
@@ -1079,24 +1085,24 @@ em {
       background-repeat: no-repeat;
       background-size: 570px 690px; }
   #homeContent .band.second {
-    height: 952px;
+    height: 600px;
     background-color: #fdeba4; }
     #homeContent .band.second .bandContent {
-      padding-top: 120px;
-      padding-bottom: 100px;
+      padding-top: 60px;
+      padding-bottom: 10px;
       height: 100%;
       background-image: url(images/tidy-back-02.svg);
       background-repeat: no-repeat;
       background-size: 700px 952px; }
   #homeContent .band.third {
-    height: 450px; }
+    height: 300px; }
     #homeContent .band.third .bandContent {
-      height: 450px;
-      padding-top: 100px;
-      padding-bottom: 100px;
-      background-image: url(images/tidy-back-03.svg);
-      background-repeat: no-repeat;
-      background-size: 650px 450px; }
+      height: 300px;
+      padding-top: 60px;
+      padding-bottom: 10px;
+      /*background-image: url(images/tidy-back-03.svg);*/
+      /*background-repeat: no-repeat;*/
+     /* background-size: 650px 450px; } */
   #homeContent .bookCover {
     margin-top: 50px;
     margin-left: 50px; }
@@ -1113,14 +1119,14 @@ em {
     height: auto; }
     #homeContent .band.first .bandContent {
       background-image: none;
-      padding-bottom: 100px; }
+      padding-bottom: 10px; }
   #homeContent .band.second, #homeContent .band.third {
     height: auto; }
     #homeContent .band.second .bandContent, #homeContent .band.third .bandContent {
       display: block;
       height: auto;
       background-image: none;
-      padding-bottom: 100px; }
+      padding-bottom: 10px; }
       #homeContent .band.second .bandContent .blurb, #homeContent .band.third .bandContent .blurb {
         max-width: 100%; }
   #homeContent .bookCover {
@@ -1184,68 +1190,6 @@ em {
   .section .event .eventDetails {
     font-size: 13px;
     line-height: 18px; }
-
-.hexBadges {
-  position: relative;
-  width: 500px;
-  margin-top: -130px;
-  height: 600px; }
-  .hexBadges img {
-    width: 120px;
-    height: 139px;
-    position: absolute;
-    -webkit-transition-property: opacity;
-    -moz-transition-property: opacity;
-    -o-transition-property: opacity;
-    transition-property: opacity;
-    -webkit-transition-duration: 0.25s;
-    -moz-transition-duration: 0.25s;
-    -o-transition-duration: 0.25s;
-    transition-duration: 0.25s; }
-    .hexBadges img.r0.c0, .hexBadges img.r2.c0, .hexBadges img.r4.c0 {
-      left: 0; }
-    .hexBadges img.r0.c1, .hexBadges img.r2.c1, .hexBadges img.r4.c1 {
-      left: 125px; }
-    .hexBadges img.r0.c2, .hexBadges img.r2.c2, .hexBadges img.r4.c2 {
-      left: 250px; }
-    .hexBadges img.r0.c3, .hexBadges img.r2.c3, .hexBadges img.r4.c3 {
-      left: 375px; }
-    .hexBadges img.r1.c0, .hexBadges img.r3.c0, .hexBadges img.r5.c0 {
-      left: 62px; }
-    .hexBadges img.r1.c1, .hexBadges img.r3.c1, .hexBadges img.r5.c1 {
-      left: 187px; }
-    .hexBadges img.r1.c2, .hexBadges img.r3.c2, .hexBadges img.r5.c2 {
-      left: 312px; }
-    .hexBadges img.r1.c3, .hexBadges img.r3.c3, .hexBadges img.r5.c3 {
-      left: 437px; }
-    .hexBadges img.r0 {
-      top: 0px; }
-    .hexBadges img.r1 {
-      top: 107.5px; }
-    .hexBadges img.r2 {
-      top: 215px; }
-    .hexBadges img.r3 {
-      top: 322.5px; }
-    .hexBadges img.r4 {
-      top: 430px; }
-    .hexBadges img.r5 {
-      top: 537.5px; }
-
-@media screen and (max-width: 1023px) {
-  .hexBadges {
-    width: 350px; }
-    .hexBadges img.r0.c2, .hexBadges img.r2.c2, .hexBadges img.r4.c2 {
-      left: 125px; }
-    .hexBadges img.r1.c2, .hexBadges img.r3.c2, .hexBadges img.r5.c2 {
-      left: 187px; } }
-
-/* some tweaks added later*/
-code {
-  margin: 0;
-  padding: 1px 2px;
-  border: none;
-  color: inherit;
-}
 
 pre {
   padding: 0.25em 0.5em;
