trying to fix format of homepage

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 
 <!-- page -->
+<div class = "main main-raised">
 <div id="homeContent">
 
 <!-- band_one.md populates this section -->
@@ -43,8 +44,8 @@
     </div>
 
 {{end}}
+
   <!-- band three -->
-  
   <div class="band third">
     <div class="bandContent">
         <div class = "blurb_3col">
@@ -61,7 +62,7 @@
       </div>
     </div> 
 </div> 
-
+</div>
 {{ end }}
 
 
