--- a/public/css/main-site.css
+++ b/public/css/main-site.css
@@ -1293,3 +1293,23 @@ table, tbody, tfoot, thead, tr, th, td {
 .pl-1 {
   padding-left: .25rem !important;
 }
+
+
+
+/* Maria's additions */
+
+.main {
+  background: #FFFFFF;
+  position: relative;
+  z-index: 3;
+}
+
+.main-raised {
+  margin: -60px 30px 0px;
+  border-radius: 6px;
+  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+}
+
+.landing-page .wrapper {
+  background: #CCCCCC;
+}
