updates updates updates

--- a/public/css/main-site.css
+++ b/public/css/main-site.css
@@ -430,7 +430,7 @@ a {
     color: #1a162d; }
 
 .pushFooter {
-  position: relative;
+  position: absolute;
   z-index: 11;
   min-height: 100%;
   margin-bottom: -92px; }
@@ -443,17 +443,20 @@ a {
 #rStudioFooter {
   z-index: 12;
   box-sizing: border-box;
-  height: 92px; }
+  height: 20px; 
+  position: fixed;
+  width: 100%;
+  bottom: 0px;
+}
   #rStudioFooter.band {
     background-color: #75aadb;
     color: #fff;
     padding: 30px 5%;
+    height: 20px;
     font-weight: normal;
     font-size: 12px;
     line-height: 25px; }
   #rStudioFooter .bandContent {
-    display: flex;
-    flex-shrink: 3; 
     justify-content: space-between;
     display: -ms-flexbox;
     -ms-flex-pack: justify;
@@ -493,7 +496,7 @@ a {
     margin: 0 2px; } }
 
 #rStudioFooter {
-  min-height: 92px;
+  min-height: 5px;
   height: auto; }
   #rStudioFooter.band {
     background-color: #767381; }
@@ -1053,7 +1056,7 @@ em {
 #homeContent {
   background-color: #fff; }
   #homeContent .band .bandContent {
-    display: flex;
+    display: inline-flex;
     justify-content: space-between;
     display: -ms-flexbox;
     -ms-flex-pack: justify;
@@ -1066,7 +1069,7 @@ em {
     min-height: 60px;
     font-size: 24px;
     line-height: 40px;
-    max-width: 48%; }
+    max-width: 75%; }
     #homeContent .band .blurb .tagline {
       font-size: 36px;
       margin-bottom: 16px; }
@@ -1085,7 +1088,7 @@ em {
       background-repeat: no-repeat;
       background-size: 570px 690px; }
   #homeContent .band.second {
-    height: 600px;
+    height: 350px;
     background-color: #fdeba4; }
     #homeContent .band.second .bandContent {
       padding-top: 60px;
@@ -1095,23 +1098,17 @@ em {
       background-repeat: no-repeat;
       background-size: 700px 952px; }
   #homeContent .band.third {
-    height: 300px; }
+    height: 350px; }
     #homeContent .band.third .bandContent {
       height: 300px;
-      padding-top: 60px;
+      padding-top: 10px;
       padding-bottom: 10px;
       /*background-image: url(images/tidy-back-03.svg);*/
       /*background-repeat: no-repeat;*/
      /* background-size: 650px 450px; } */
-  #homeContent .bookCover {
-    margin-top: 50px;
-    margin-left: 50px; }
-  #homeContent .bee1 {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    width: 100px;
-    height: auto; }
+    }
+
+
 
 /* size & position adjustments */
 @media screen and (max-width: 1023px) {
