--- a/public/css/main-site.css
+++ b/public/css/main-site.css
@@ -49,7 +49,6 @@ table {
 
 .flex {
   display: flex;
-  flex-shrink: 3; 
   justify-content: space-between;
   display: -ms-flexbox;
   -ms-flex-pack: justify;
@@ -174,7 +173,6 @@ a {
   transition-duration: 0.25s; }
   #rStudioHeader .headerChunk {
     display: flex;
-    flex-shrink: 3; 
     justify-content: flex-start;
     align-items: center;
     display: -ms-flexbox;
@@ -185,7 +183,7 @@ a {
     -webkit-justify-content: flex-start; }
   #rStudioHeader #menuToggler, #rStudioHeader #overlayNavToggler {
     display: inline-block;
-    flex-shrink: 3;
+    flex-shrink: 0;
     width: 30px;
     height: 30px;
     background-repeat: no-repeat;
@@ -222,7 +220,6 @@ a {
   #rStudioHeader .innards {
     padding: 40px 0;
     display: flex;
-    flex-shrink: 3; 
     justify-content: space-between;
     display: -ms-flexbox;
     -ms-flex-pack: justify;
@@ -355,7 +352,7 @@ a {
   text-align: right;
   font-weight: 400;
   font-size: 13px;
-  line-height: 15px;
+  line-height: 26px;
   white-space: nowrap; }
   #rStudioHeader #menu #menuToggler {
     display: none; }
@@ -430,7 +427,7 @@ a {
     color: #1a162d; }
 
 .pushFooter {
-  position: absolute;
+  position: relative;
   z-index: 11;
   min-height: 100%;
   margin-bottom: -92px; }
@@ -441,22 +438,19 @@ a {
   display: block; }
 
 #rStudioFooter {
+  position: relative;
   z-index: 12;
   box-sizing: border-box;
-  height: 20px; 
-  position: fixed;
-  width: 100%;
-  bottom: 0px;
-}
+  height: 92px; }
   #rStudioFooter.band {
     background-color: #75aadb;
     color: #fff;
     padding: 30px 5%;
-    height: 20px;
     font-weight: normal;
     font-size: 12px;
     line-height: 25px; }
   #rStudioFooter .bandContent {
+    display: flex;
     justify-content: space-between;
     display: -ms-flexbox;
     -ms-flex-pack: justify;
@@ -496,7 +490,7 @@ a {
     margin: 0 2px; } }
 
 #rStudioFooter {
-  min-height: 5px;
+  min-height: 92px;
   height: auto; }
   #rStudioFooter.band {
     background-color: #767381; }
@@ -516,7 +510,6 @@ a {
 
 .splitColumns {
   display: flex;
-  flex-shrink: 3; 
   justify-content: space-between;
   display: -ms-flexbox;
   -ms-flex-pack: justify;
@@ -553,7 +546,7 @@ a {
 
 /* Sections */
 .section {
-  margin-bottom: 10px; }
+  margin-bottom: 40px; }
   .section.info {
     background-color: #f8f8f8;
     padding: 20px; }
@@ -565,7 +558,7 @@ a {
   .section.smallBottomMargin {
     margin-bottom: 10px; }
   .section.marginTop {
-    margin-top: 20px; }
+    margin-top: 40px; }
 
 .sectionTitle {
   font-size: 24px;
@@ -618,7 +611,6 @@ a {
 
 .listItem {
   display: flex;
-  flex-shrink: 3; 
   justify-content: flex-start;
   display: -ms-flexbox;
   -ms-flex-pack: start;
@@ -640,7 +632,6 @@ a {
     line-height: 20px; }
     .listItem .itemDetails .itemHeader {
       display: flex;
-      flex-shrink: 3; 
       justify-content: space-between;
       display: -ms-flexbox;
       -ms-flex-pack: justify;
@@ -1056,7 +1047,7 @@ em {
 #homeContent {
   background-color: #fff; }
   #homeContent .band .bandContent {
-    display: inline-flex;
+    display: flex;
     justify-content: space-between;
     display: -ms-flexbox;
     -ms-flex-pack: justify;
@@ -1066,10 +1057,10 @@ em {
   #homeContent .band .blurb {
     font-weight: 300;
     display: inline-block;
-    min-height: 60px;
+    min-height: 160px;
     font-size: 24px;
     line-height: 40px;
-    max-width: 75%; }
+    max-width: 48%; }
     #homeContent .band .blurb .tagline {
       font-size: 36px;
       margin-bottom: 16px; }
@@ -1088,27 +1079,33 @@ em {
       background-repeat: no-repeat;
       background-size: 570px 690px; }
   #homeContent .band.second {
-    height: 350px;
+    height: 952px;
     background-color: #fdeba4; }
     #homeContent .band.second .bandContent {
-      padding-top: 60px;
-      padding-bottom: 10px;
+      padding-top: 120px;
+      padding-bottom: 100px;
       height: 100%;
       background-image: url(images/tidy-back-02.svg);
       background-repeat: no-repeat;
       background-size: 700px 952px; }
   #homeContent .band.third {
-    height: 350px; }
+    height: 450px; }
     #homeContent .band.third .bandContent {
-      height: 300px;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      /*background-image: url(images/tidy-back-03.svg);*/
-      /*background-repeat: no-repeat;*/
-     /* background-size: 650px 450px; } */
-    }
-
-
+      height: 450px;
+      padding-top: 100px;
+      padding-bottom: 100px;
+      background-image: url(images/tidy-back-03.svg);
+      background-repeat: no-repeat;
+      background-size: 650px 450px; }
+  #homeContent .bookCover {
+    margin-top: 50px;
+    margin-left: 50px; }
+  #homeContent .bee1 {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    width: 100px;
+    height: auto; }
 
 /* size & position adjustments */
 @media screen and (max-width: 1023px) {
@@ -1116,14 +1113,14 @@ em {
     height: auto; }
     #homeContent .band.first .bandContent {
       background-image: none;
-      padding-bottom: 10px; }
+      padding-bottom: 100px; }
   #homeContent .band.second, #homeContent .band.third {
     height: auto; }
     #homeContent .band.second .bandContent, #homeContent .band.third .bandContent {
       display: block;
       height: auto;
       background-image: none;
-      padding-bottom: 10px; }
+      padding-bottom: 100px; }
       #homeContent .band.second .bandContent .blurb, #homeContent .band.third .bandContent .blurb {
         max-width: 100%; }
   #homeContent .bookCover {
@@ -1187,6 +1184,68 @@ em {
   .section .event .eventDetails {
     font-size: 13px;
     line-height: 18px; }
+
+.hexBadges {
+  position: relative;
+  width: 500px;
+  margin-top: -130px;
+  height: 600px; }
+  .hexBadges img {
+    width: 120px;
+    height: 139px;
+    position: absolute;
+    -webkit-transition-property: opacity;
+    -moz-transition-property: opacity;
+    -o-transition-property: opacity;
+    transition-property: opacity;
+    -webkit-transition-duration: 0.25s;
+    -moz-transition-duration: 0.25s;
+    -o-transition-duration: 0.25s;
+    transition-duration: 0.25s; }
+    .hexBadges img.r0.c0, .hexBadges img.r2.c0, .hexBadges img.r4.c0 {
+      left: 0; }
+    .hexBadges img.r0.c1, .hexBadges img.r2.c1, .hexBadges img.r4.c1 {
+      left: 125px; }
+    .hexBadges img.r0.c2, .hexBadges img.r2.c2, .hexBadges img.r4.c2 {
+      left: 250px; }
+    .hexBadges img.r0.c3, .hexBadges img.r2.c3, .hexBadges img.r4.c3 {
+      left: 375px; }
+    .hexBadges img.r1.c0, .hexBadges img.r3.c0, .hexBadges img.r5.c0 {
+      left: 62px; }
+    .hexBadges img.r1.c1, .hexBadges img.r3.c1, .hexBadges img.r5.c1 {
+      left: 187px; }
+    .hexBadges img.r1.c2, .hexBadges img.r3.c2, .hexBadges img.r5.c2 {
+      left: 312px; }
+    .hexBadges img.r1.c3, .hexBadges img.r3.c3, .hexBadges img.r5.c3 {
+      left: 437px; }
+    .hexBadges img.r0 {
+      top: 0px; }
+    .hexBadges img.r1 {
+      top: 107.5px; }
+    .hexBadges img.r2 {
+      top: 215px; }
+    .hexBadges img.r3 {
+      top: 322.5px; }
+    .hexBadges img.r4 {
+      top: 430px; }
+    .hexBadges img.r5 {
+      top: 537.5px; }
+
+@media screen and (max-width: 1023px) {
+  .hexBadges {
+    width: 350px; }
+    .hexBadges img.r0.c2, .hexBadges img.r2.c2, .hexBadges img.r4.c2 {
+      left: 125px; }
+    .hexBadges img.r1.c2, .hexBadges img.r3.c2, .hexBadges img.r5.c2 {
+      left: 187px; } }
+
+/* some tweaks added later*/
+code {
+  margin: 0;
+  padding: 1px 2px;
+  border: none;
+  color: inherit;
+}
 
 pre {
   padding: 0.25em 0.5em;
@@ -1289,24 +1348,4 @@ table, tbody, tfoot, thead, tr, th, td {
 
 .pl-1 {
   padding-left: .25rem !important;
-}
-
-
-
-/* Maria's additions */
-
-.main {
-  background: #FFFFFF;
-  position: relative;
-  z-index: 3;
-}
-
-.main-raised {
-  margin: -60px 30px 0px;
-  border-radius: 6px;
-  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
-}
-
-.landing-page .wrapper {
-  background: #CCCCCC;
 }
