--- a/layouts/index.html
+++ b/layouts/index.html
@@ -40,11 +40,32 @@
       </div>
     </div> <!-- bandContent -->
   </div> <!-- band -->
-
-</div>
+  
 {{ end }}
 
 <!-- band_three.md populates this section -->
+{{ with .Site.GetPage "/home/band_three.md" }}
+
+  <div class="band third">
+    <div class="bandContent">
+      <div class="blurb">
+        <div class="tagline">
+          {{ .Title }}
+        </div>
+        <div>
+          {{ .Content | markdownify }}
+        </div>
+      </div>
+      <div class="blurb">
+        {{ partial "homepage_sticky_3" . }}
+        {{ partial "homepage_sticky_4" . }}
+      </div>
+    </div> <!-- bandContent -->
+  </div> <!-- band -->
+
+{{ end }}
+</div> <!-- homeContent -->
+
 
 {{ end }}
 
