--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -2,6 +2,7 @@
   <div id="menuToggler"></div>
   <div id="menuItems" class="">
     <script defer src="/static/fontawesome/fontawesome-all.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     {{ $page := . }}
     {{ range .Site.Menus.main }}
       {{ $active := or ($page.IsMenuCurrent "main" .) ($page.HasMenuCurrent "main" .) }}
