--- a/layouts/shortcodes/schedule.html
+++ b/layouts/shortcodes/schedule.html
@@ -2,17 +2,16 @@
         {{- range .Site.Data.schedule }}
         {{- range . }}
         <tr>
-                 <td align="right" style="width:18%;text-align:right">{{ .week }}</td>
-            <td align="right" style="width:18%;text-align:right">{{ .date }}</td>
-            <td style="width:50%;text-align:left">{{ .title | markdownify }}</td>
-
+                                 <td align="left" style="width:15%;text-align:right">{{ .week }}</td>
+            <td align="right" style="width:25%;text-align:right">{{ .date }}</td>
+            <td style="width:40%;text-align:left">{{ .title | markdownify }}</td>
             {{- if .header }} 
-            <td style="width:8%;text-align:center" class="mid-table-header">Slides</td>
-            <td style="width:8%;text-align:center" class="mid-table-header">Reading</td>
-            <td style="width:8%;text-align:center" class="mid-table-header">Lab</td>
-            <td style="width:8%;text-align:center" class="mid-table-header">HW</td>
-            <td style="width:8%;text-align:center" class="mid-table-header">Quiz</td>
-            <td style="width:8%;text-align:center" class="mid-table-header">Project</td>
+            <td style="width:5%;text-align:center" class="mid-table-header">Slides</td>
+            <td style="width:5%;text-align:center" class="mid-table-header">Reading</td>
+            <td style="width:5%;text-align:center" class="mid-table-header">Lab</td>
+            <td style="width:5%;text-align:center" class="mid-table-header">HW</td>
+            <td style="width:5%;text-align:center" class="mid-table-header">Quiz</td>
+            <td style="width:5%;text-align:center" class="mid-table-header">Project</td>
 
 
             {{- else }} 
@@ -20,61 +19,61 @@
             {{- if .slides }}
             <td align="center" style="width:10%;text-align:center"><a
                     href="{{ .Site.baseurl }}/slides/{{ .slides }}/">
-                    <i class="fas fa-book-reader fa-lg"></i></a></td>
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             {{- else }}
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
-                    <i class="fas fa-book-reader fa-lg"></i></font>
+                    <i class="fas fa-laptop fa-lg"></i></font>
             </td>
             {{- end }}
 
             {{- if .reading}}
             <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/reading/{{ .reading }}/">
-                    <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
+                    <i class="fas fa-book fa-lg"></i></a></td>
             {{- else }}
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
-                    <i class="fas fa-chalkboard-teacher fa-lg"></i></font>
+                    <i class="fas fa-book fa-lg"></i></font>
             </td>
             {{- end }}
 
             {{- if .labs }}
             <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/hw/{{ .hw }}/">
-                    <i class="fas fa-laptop-code fa-lg"></i></a></td>
+                    <i class="fas fa-edit fa-lg"></i></a></td>
             {{- else }}
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
-                    <i class="fas fa-laptop-code fa-lg"></i></font>
+                    <i class="fas fa-edit fa-lg"></i></font>
             </td>
             {{- end }}
 
             {{- if .hw }}
             <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/assignment/{{ .assignment }}/">
-                    <i class="fas fa-pencil-ruler fa-lg"></i></a></td>
+                    <i class="fas fa-file-code fa-lg"></i></a></td>
             {{- else }}
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
-                    <i class="fas fa-pencil-ruler fa-lg"></i></font>
+                    <i class="fas fa-file-code fa-lg"></i></font>
             </td>
             {{- end }}
             
                {{- if .quiz }}
             <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/assignment/{{ .assignment }}/">
-                    <i class="fas fa-pencil-ruler fa-lg"></i></a></td>
+                    <i class="fas fa-check-square fa-lg"></i></a></td>
             {{- else }}
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
-                    <i class="fas fa-pencil-ruler fa-lg"></i></font>
+                    <i class="fas fa-check-square fa-lg"></i></font>
             </td>
             {{- end }}
             
                {{- if .project }}
             <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/assignment/{{ .assignment }}/">
-                    <i class="fas fa-pencil-ruler fa-lg"></i></a></td>
+                    <i class="fas fa-file-powerpoint fa-lg"></i></a></td>
             {{- else }}
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
-                    <i class="fas fa-pencil-ruler fa-lg"></i></font>
+                    <i class="fas fa-file-powerpoint fa-lg"></i></font>
             </td>
             {{- end }}
 
