--- a/layouts/shortcodes/schedule.html
+++ b/layouts/shortcodes/schedule.html
@@ -37,23 +37,23 @@
             </td>
             {{- end }}
 
-            {{- if .labs }}
+            {{- if .lab }}
             <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/hw/{{ .hw }}/">
+                    <i class="fas file-code fa-lg"></i></a></td>
+            {{- else }}
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas file-code fa-lg"></i></font>
+            </td>
+            {{- end }}
+
+            {{- if .hw }}
+            <td align="center" style="width:10%;text-aign:center"><a href="{{ .Site.baseurl }}/hw/{{ .hw }}">
                     <i class="fas fa-edit fa-lg"></i></a></td>
             {{- else }}
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
-            </td>
-            {{- end }}
-
-            {{- if .hw }}
-            <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/assignment/{{ .assignment }}/">
-                    <i class="fas fa-file-code fa-lg"></i></a></td>
-            {{- else }}
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-file-code fa-lg"></i></font>
             </td>
             {{- end }}
             
