--- a/layouts/shortcodes/schedule.html
+++ b/layouts/shortcodes/schedule.html
@@ -58,7 +58,7 @@
             {{- end }}
             
                {{- if .quiz }}
-            <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/assignment/{{ .assignment }}/">
+            <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/quiz/{{ .quiz }}">
                     <i class="fas fa-check-square fa-lg"></i></a></td>
             {{- else }}
             <td align="center" style="width:10%;text-align:center">
