--- a/layouts/shortcodes/schedule.html
+++ b/layouts/shortcodes/schedule.html
@@ -17,7 +17,7 @@
 
             {{- if .slides }}
             <td align="center" style="width:10%;text-align:center"><a
-                    href="{{ .Site.baseurl }}/slides/{{ .slides }}/">
+                    href="{{ .Site.baseurl }}/slides/{{ .slides }}">
                     <i class="fas fa-laptop fa-lg"></i></a></td>
             {{- else }}
             <td align="center" style="width:10%;text-align:center">
@@ -27,7 +27,7 @@
             {{- end }}
 
             {{- if .lab }}
-            <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/labs/{{ .lab }}/">
+            <td align="center" style="width:10%;text-align:center"><a href="{{ .Site.baseurl }}/labs/{{ .lab }}">
                     <i class="fas file-code fa-lg"></i></a></td>
             {{- else }}
             <td align="center" style="width:10%;text-align:center">
